解决右键不能直接运行用例的问题 https://github.com/NomicFoundation/hardhat/issues/1627#issuecomment-872713053

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "jsx": "react-jsx"
-  }
+  },
+  "exclude": ["dist", "node_modules"],
+  "include": ["./test", "./src", "./scripts"],
+  "files": ["./hardhat.config.ts"]
 }
