--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typechain/ethers-v5": "^10.1.0",
     "@types/chai": "^4.2.21",
     "@types/node": "^16.4.12",
+    "@types/node-fetch": "2.x",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "chai": "^4.3.7",
